--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .breadcrumb-item > a{
-    color: rgb(44, 14, 14);
+    color: rgb(26, 24, 24);
 }
 .breadcrumb-item > a:hover{
     color: rgb(14, 77, 250);
@@ -79,7 +79,7 @@ body {
 .miniIconOthers{
     font-size: 22px;
     margin-bottom: -4px;
-    color: rgb(44, 14, 14);
+    color: rgb(26, 22, 22);
 }
 
 .wineColor{
@@ -104,6 +104,9 @@ th{
   and (-webkit-min-device-pixel-ratio: 1){
     body{
         margin: 0;
+        width: 95vw;
+        padding: 0;
+        
     }
     .bigNav{
         padding: 10px;
@@ -136,11 +139,18 @@ th{
   and (-webkit-min-device-pixel-ratio: 2){
     body{
         margin: 0;
+        padding: 0;
+        overflow-x: none;
+        width: 100%;
     }
+
+
     .bigNav{
         padding: 10px;
+        width: 100%;
         display: flex;
         flex-direction: row;
+        margin: 0;
     }
 
     .bigNavText{
@@ -153,19 +163,46 @@ th{
     }
 
     .smallNav{        
-        margin: 20px 5px;
+        margin-left: auto;
+        margin-right: auto;
         border-radius: 12px;
         padding: 6px 6px;
         height: auto;
+        width: 90vw;
     }
+    
+     
     .breadcrumb{
         text-align: center;
         margin-left: 1px;
     }
 
     .bigBar{
-        margin: 1px 2px;
+        margin-left: auto;
+        margin-right: auto;
     }
+
+    .smallBar{
+        width: 50px;
+        border-radius: none; 
+        align-self: center;   
+    }
+
+    .listGroup{
+        display: flex;
+        flex-direction: row;
+        border-radius: none;
+    }
+
+    button > span{
+        display: none;
+    }
+
+    .miniIcon, .miniIconOthers{
+        font-size: 30px;
+    }
+    
+   
 
 
 
